add some view and back traitement

--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,14 @@
 .cutomMt-4{
   margin-top: 1.9rem;
 }
+.customTitleBis{
+  font-size: 1.2rem;
+}
+.customCount{
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 
  /* ------------------------------------------------------------------------------------------- */
 
