Fix some Bug 1.5
add -edit casier-general
add -edit rapport
add -delete rapport
delete longue freq

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@
 }
 .customLink{
   text-decoration: none;
+  
 }
 .customColorSvg{
   fill: white;
@@ -301,4 +302,11 @@
     position: absolute;
     top: 10px;
     left: 250px;
+}
+.customLinkBis{
+  color: black;
+}
+
+.customDate{
+  font-size: 0.6rem;
 }
