Add Hierachy page

--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,16 @@
 .customDate{
   font-size: 0.6rem;
 }
+
+
+
+.customTitleHieBis{
+  font-size: 1.2rem;
+}
+.customTitleHie{
+  font-size: 1.3rem;
+}
+.card-img-top{
+  width: 50%!important;
+  margin-left: 80px;
+}
