--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,14 @@
   width: 50%!important;
   margin-left: 80px;
 }
+
+form{
+  padding: 0;
+  margin: 0;
+}
+
+.customTitleAdmin{
+  color: white;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
