--- a/css/style.css
+++ b/css/style.css
@@ -334,3 +334,11 @@ form{
   font-size: 1.4rem;
   font-weight: bold;
 }
+.customMarginR{
+  margin-right: 15px;
+}
+.customPOSBtn{
+  position: absolute;
+  top: 4px;
+  right: 20px;
+}
